# starter-repo

./: .env.example  .gitignore  README.md  pyproject.toml
.bmad/_cfg/: agent-manifest.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
.bmad/_cfg/ides/: claude-code.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.claude/: settings.local.json
.cursor/rules/bmad/: index.mdc
.github/workflows/: tests.yml
docs/: architecture.md  bmm-workflow-status.yaml  epics.md  pm-interface-ux-spec.md  prd-structured-action-items.md  prd.md  research-cicd.md
docs/sprint-artifacts/: 1-1-project-setup-package-structure.md  1-2-configuration-system.md  1-3-exception-hierarchy-logging.md  1-4-anthropic-client-integration.md  1-5-simulation-class-basic-crud.md  1-6-agent-definition-storage.md  1-7-simulation-rules-parameters.md  sprint-status.yaml
docs/sprint-artifacts/stories/: 1-1-project-setup-package-structure.md  1-2-configuration-system.md
docs/wireframes/: approval-card-idf.excalidraw  cos-briefing-full-screen.excalidraw  demand-card-hostages.excalidraw  operation-card-mossad.excalidraw  pm-interface-mockup.html
logs/pipelines/play_test/: 20251216_235451_play-turn-1.json  20251217_000117_play-turn-1.json  20251217_000117_play-turn-10.json  20251217_000117_play-turn-11.json  20251217_000117_play-turn-12.json  20251217_000117_play-turn-13.json  20251217_000117_play-turn-14.json  20251217_000117_play-turn-15.json  20251217_000117_play-turn-16.json  20251217_000117_play-turn-17.json  20251217_000117_play-turn-18.json  20251217_000117_play-turn-19.json  20251217_000117_play-turn-2.json  20251217_000117_play-turn-20.json  20251217_000117_play-turn-3.json  (+18 more)
simulations/: .gitkeep
simulations/israeli_pm/: config.yaml
src/pm6/: __init__.py  __main__.py  config.py  exceptions.py  logger.py  modes.py  replay.py
src/pm6/agents/: routing.py  (+5 more)
src/simConfigGui/: __init__.py  __main__.py  app.py  config.py
tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_cost.py  test_cost_estimator.py  test_gui_simulation_persistence.py  test_logger.py  test_logging.py  test_modes.py  test_performance.py  test_pipeline_play.py  test_rate_limiter.py  test_relevance.py  test_reliability.py  test_replay.py  test_replay_verification.py  test_scenario_tester.py  test_simulation.py  test_state_updater.py  test_testing.py  test_tools.py  test_validator.py
(+376 files in other folders)
